--- a/src/app/layouts/unete-misiones/unete-misiones.component.html
+++ b/src/app/layouts/unete-misiones/unete-misiones.component.html
@@ -305,7 +305,7 @@
     <div class="container">
       <div class="row text-center pb-1">
         <div class="col-12 col-lg">
-            <a href="#" (click)="openContactUsModal($event)" data-target="modalcontacto">Contáctanos</a>
+            <a href="#" (click)="openContactUsModal($event)">Contáctanos</a>
         </div> 
       </div>
       <br>
