Correcciones. Borrado de imagenes.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -99,7 +99,7 @@
           </p>
         </div>
         <div class="identityComponent col-12 col-lg-4">
-          <h2 class="text-center">MISION</h2>
+          <h2 class="text-center">MISIÓN</h2>
           <hr>
           <p class="text-center">A través de diferentes iniciativas de <span class="highlightText">evangelismo</span> y <span class="highlightText">misiones</span> queremos extender el despertar de la Iglesia de Cristo.
           </p>
@@ -275,7 +275,7 @@
             <!-- Mensaje de éxito -->
             <div *ngIf="enviadoConExito">
               <div class="container mt-2">
-                <div class="alert alert-success text-dark fw-bold" role="alert">
+                <div class="alert alert-success text-dark" role="alert">
                   <!-- <span class="material-icons me-2">check_circle</span>  -->
                   Suscripción a misionero enviada con éxito. Le enviaremos un mensaje a la dirección de correo electrónico indicado en unos minutos, si la red funciona normalmente. Le haremos llegar el enlace web para seguir su proceso de suscripción. Muchas gracias.
                 </div>
@@ -284,7 +284,7 @@
             <!-- Mensaje de error -->
             <div *ngIf="envioFallido">
               <div class="container mt-2">
-                <div class="alert alert-danger text-dark fw-bold" role="alert">
+                <div class="alert alert-danger text-dark" role="alert">
                   Hubo un error al enviar el formulario. Por favor, inténtalo de nuevo.
                 </div>
               </div>
