Nuevo apartado Tour Misionero 2025.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -150,7 +150,7 @@
   <!--=============== SPEAKERS =============== -->
   <!--======================================== -->
 
-  <section id="speakers" class="mt-4 mb-3">
+  <section id="speakers" class="mt-4 mb-3 pt-4 pb-5">
     <div class="container">
       <div id="speakersSpaceAtBeginning" class="row"></div>
 
@@ -200,6 +200,43 @@
             </div>
         </div>
       </div>
+    </div>
+  </section>
+
+
+
+  <!--======================================== -->
+  <!--========== CURRENT YEAR TOUR =========== -->
+  <!--======================================== -->
+
+  <section id="currentYearTour" class="pt-4 pb-5">
+
+    <div class="col text-center mt-4 mb-5">
+      <p><span id="currentYearTourFirstSpan">TOUR MISIONERO </span><span id="currentYearTourSecondSpan">2025</span></p>
+    </div>
+    
+    <div class="row mb-2">
+      <!-- <div class="gapCol">&nbsp;</div> -->
+      <div class="imageContainer">
+        <img src="../assets/img/brochure1.jpeg" alt="Descripción de la imagen 1">
+      </div>
+      <div class="imageContainer">
+        <img src="../assets/img/brochure2.jpeg" alt="Descripción de la imagen 2">
+      </div>
+      <!-- <div class="col-sm-12 col-md-6 col-lg-3">&nbsp;</div> -->
+
+    </div>
+    
+    <div class="row">
+      <!-- <div class="gapCol">&nbsp;</div> -->
+      <div class=" imageContainer">
+        <img src="../assets/img/brochure3.jpeg" alt="Descripción de la imagen 3">
+      </div>
+      <div class="imageContainer">
+        <img src="../assets/img/brochure4.jpeg" alt="Descripción de la imagen 4">
+      </div>
+      <!-- <div class="col-sm-12 col-md-6 col-lg-3">&nbsp;</div> -->
+
     </div>
   </section>
 
